Fix overflow scrolls

--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -1,5 +1,11 @@
 .ui-tabs {
-  overflow: auto;
+  overflow-x: auto;
+  border-bottom: 1px solid var(--grey100);
+  -webkit-overflow-scrolling: touch;
+}
+
+.ui-tabs::-webkit-scrollbar {
+  display: none;
 }
 
 .ui-tabs__inner {
@@ -9,7 +15,6 @@
   justify-content: flex-start;
   margin: 0 auto;
   padding: var(--spacing-small) var(--spacing-medium) 0 0;
-  border-bottom: 1px solid var(--grey100);
   width: 100%;
   height: 4.2rem;
   list-style: none;
